--- a/app/css/main.css
+++ b/app/css/main.css
@@ -55,4 +55,41 @@
   .inputField:hover .inputBorder {
     border: 1px solid rgba(0, 0, 0, 0.5); }
 
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  position: relative; }
+  @media (max-width: 1220px) {
+    .container {
+      justify-content: center;
+      flex-direction: column;
+      width: 100%;
+      padding: 0 30px 30px; } }
+
+.card {
+  padding: 24px;
+  border-radius: 4px;
+  border: 1px solid rgba(0, 0, 0, 0.4); }
+
+.actions {
+  width: 270px;
+  position: sticky;
+  top: 24px;
+  max-height: 300px; }
+  @media (max-width: 1220px) {
+    .actions {
+      width: 100%;
+      position: static;
+      margin-top: 24px; } }
+
+.content {
+  width: 900px; }
+  @media (max-width: 1220px) {
+    .content {
+      width: 100%; } }
+  .content div {
+    margin-top: 24px; }
+
 /*# sourceMappingURL=main.css.map */
