--- a/display/scss/main.scss
+++ b/display/scss/main.scss
@@ -120,29 +120,71 @@ body{
 .era{
 	display: inline-block;
 	margin-top: 10rem;
-	font-size: 15rem;
+	font-size: 8rem;
 	color: #FEFEFE;
 	margin: 1rem;
 }
 
 .card{
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-	padding: 6px;
+	// padding: 6px;
 	text-align: center;
+	max-width: 80%;
 	background-color: $card;
 	color: #FEFEFE;
-	margin-left: 1rem;
-	margin-right: 1rem;
+	margin: 3.5rem;
 	border-radius: 5px;
 	display: flex;
 	flex: 1 1 auto;
-	// &-img{
-	// 	width: 250px;
-	// }
+	max-height: 100%;
+	&-img{
+		height: 7.7rem;
+		width: 100%;
+		padding: 0.4rem;
+		border-radius: 100%;
+		overflow-x: none;
+	}
+
+	&-content{
+		padding-top: 1rem;
+		padding-right: 1rem;
+	}
 }
 
-img{
-	width: 14rem;
+.web{
+
+
+	&:hover{
+		box-shadow:0px 0px 30px red;
+		-moz-transition: all 0.2s ease-in;
+		-o-transition: all 0.2s ease-in;
+		-webkit-transition: all 0.2s ease-in;
+		transition: all 0.2s ease-in;
+	}
+}
+
+.gameArt{
+
+
+	&:hover{
+		box-shadow:0px 0px 30px blue;
+		-moz-transition: all 0.2s ease-in;
+		-o-transition: all 0.2s ease-in;
+		-webkit-transition: all 0.2s ease-in;
+		transition: all 0.2s ease-in;
+	}
+}
+
+.graphic{
+
+
+	&:hover{
+		box-shadow:0px 0px 30px green;
+		-moz-transition: all 0.2s ease-in;
+		-o-transition: all 0.2s ease-in;
+		-webkit-transition: all 0.2s ease-in;
+		transition: all 0.2s ease-in;
+	}
 }
 
 #E::after{
