--- a/display/css/main.css
+++ b/display/css/main.css
@@ -334,7 +334,8 @@ body {
 }
 @media screen and (min-width: 720px) {
   .card {
-    margin: 3.5rem;
+    margin: 4.5rem;
+    max-width: 80%;
   }
 }
 
@@ -367,6 +368,9 @@ body {
   color: #FEFEFE;
 }
 
+.web {
+  margin: 2.5rem;
+}
 .web:hover {
   box-shadow: 0px 0px 30px red;
   -moz-transition: all 0.2s ease-in;
@@ -375,6 +379,9 @@ body {
   transition: all 0.2s ease-in;
 }
 
+.gameArt {
+  margin: 2.5rem;
+}
 .gameArt:hover {
   box-shadow: 0px 0px 30px blue;
   -moz-transition: all 0.2s ease-in;
@@ -383,6 +390,9 @@ body {
   transition: all 0.2s ease-in;
 }
 
+.graphic {
+  margin: 2.5rem;
+}
 .graphic:hover {
   box-shadow: 0px 0px 30px green;
   -moz-transition: all 0.2s ease-in;
