--- a/display/css/main.css
+++ b/display/css/main.css
@@ -277,11 +277,6 @@ body {
   display: flex;
   justify-content: center;
 }
-@media screen and (min-width: 720px) {
-  .justify-content {
-    display: block;
-  }
-}
 
 .era {
   margin-top: 1.3rem;
@@ -327,66 +322,141 @@ body {
   padding-top: 1rem;
   padding-right: 1rem;
 }
+
+.cardHolder {
+  display: flex;
+  flex-direction: row;
+}
+@media screen and (min-width: 720px) {
+  .cardHolder {
+    display: flex;
+    justify-content: space-around;
+  }
+}
 @media screen and (min-width: 540px) {
-  .card {
+  .cardHolder {
     max-width: 100%;
   }
 }
 @media screen and (min-width: 720px) {
-  .card {
+  .cardHolder {
     margin: 4.5rem;
     max-width: 80%;
   }
 }
 
 #header {
-  display: none;
   text-align: center;
   background-color: purple;
   top: -30vh;
   height: 30vh;
+  width: 100%;
   position: fixed;
   transition: 1s ease;
-  z-index: 200;
+  z-index: 2;
 }
 #header.active {
   top: 0;
+}
+@media screen and (min-width: 1140px) {
+  #header {
+    height: 20vh;
+    top: -20vh;
+  }
 }
 
 .portrait {
   display: flex;
   justify-content: center;
-  width: 7.7rem;
-  height: 8rem;
-  padding: 1rem;
+  margin-top: 2rem;
+  width: 5rem;
+  height: 5.5rem;
+  padding: 0.1rem;
   border-radius: 80%;
+}
+@media (orientation: landscape) {
+  .portrait {
+    margin-top: 0.1rem;
+    width: 3rem;
+    height: 3.5rem;
+  }
 }
 
 .content {
-  padding: 1rem;
+  padding: 0.4rem;
+}
+@media screen and (min-width: 720px) {
+  .content {
+    padding: 0.5rem;
+  }
+}
+@media (orientation: landscape) {
+  .content {
+    top: -4rem;
+    padding: 0rem;
+  }
+}
+
+#exit {
+  float: left;
+  font-size: 2rem;
+  padding: 0.5rem;
 }
 
 #footer {
-  display: none;
-  background-color: grey;
+  width: 100%;
   height: 70vh;
   position: fixed;
+  overflow-y: scroll;
   bottom: -70vh;
   transition: 1s ease;
-  z-index: 200;
+  z-index: 2;
   background-color: blue;
 }
 #footer.active {
   bottom: 0;
 }
+@media screen and (min-width: 1140px) {
+  #footer {
+    height: 80vh;
+    bottom: -80vh;
+  }
+}
 
 .portraitLrg {
-  width: 7rem;
-  height: 100%;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+@media screen and (min-width: 720px) {
+  .portraitLrg {
+    width: 7rem;
+    height: 100%;
+  }
+}
+@media screen and (min-width: 960px) {
+  .portraitLrg {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .bioLrg {
   color: #FEFEFE;
+  text-align: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+@media screen and (min-width: 960px) {
+  .bioLrg {
+    height: 100%;
+  }
+  .bioLrg h2 {
+    font-size: 1.5rem;
+  }
+  .bioLrg p {
+    font-size: 1rem;
+  }
 }
 
 .web {
