--- a/display/scss/main.scss
+++ b/display/scss/main.scss
@@ -48,24 +48,6 @@ $card: #363636;
 	border-radius: 10px;
 }
 
-// @mixin webUxAfter{
-// 	display:block;
-// 	content: '';
-// 	border-bottom: solid 0.4rem #019fb6;
-// 	transform: scaleX(0);
-// 	transition: transform 250ms ease-in-out;
-// 	border-radius: 10px;
-// }
-//
-// @mixin graphicAfter{
-// 	display:block;
-// 	content: '';
-// 	border-bottom: solid 0.4rem #019fb6;
-// 	transform: scaleX(0);
-// 	transition: transform 250ms ease-in-out;
-// 	border-radius: 10px;
-// }
-
 @mixin hoverAfter{
 	transform: scaleX(1);
 }
@@ -135,10 +117,6 @@ body{
 .justify-content{
 	display: flex;
 	justify-content: center;
-
-	@include mediaQuery($med){
-		display: block;
-	}
 }
 
 .era{
@@ -183,6 +161,16 @@ body{
 		padding-top: 1rem;
 		padding-right: 1rem;
 	}
+}
+
+.cardHolder{
+	display: flex;
+	flex-direction: row;
+
+	@include mediaQuery($med){
+		display: flex;
+		justify-content: space-around;
+	}
 
 	@include mediaQuery($sml){
 		max-width: 100%;
@@ -194,56 +182,118 @@ body{
 	}
 }
 
+
+
 #header{
-	display: none;
 	text-align: center;
 	background-color: purple;
 	top: -30vh;
 	height: 30vh;
+	width: 100%;
 	position: fixed;
 	transition: 1s ease;
-	z-index: 200;
+	z-index: 2;
 
 	&.active{
 		top: 0;
+	}
+
+	@include mediaQuery($xlrg){
+		height: 20vh;
+		top: -20vh;
 	}
 }
 
 .portrait{
 	display: flex;
 	justify-content: center;
-	width: 7.7rem;
-	height: 8rem;
-	padding: 1rem;
+	margin-top: 2rem;
+	width: 5rem;
+	height: 5.5rem;
+	padding: 0.1rem;
 	border-radius: 80%;
+
+	@media(orientation: landscape){
+		margin-top: 0.1rem;
+		width: 3rem;
+		height: 3.5rem;
+	}
 }
 
 .content{
-	padding: 1rem;
+	padding: 0.4rem;
+
+	@include mediaQuery($med){
+		padding: 0.5rem;
+	}
+
+	@media (orientation: landscape){
+		top: -4rem;
+		padding: 0rem;
+	}
+}
+
+#exit{
+	float: left;
+	font-size: 2rem;
+	padding: 0.5rem;
 }
 
 #footer{
-	display: none;
-	background-color: grey;
+	width: 100%;
 	height: 70vh;
 	position: fixed;
+	overflow-y: scroll;
 	bottom: -70vh;
 	transition: 1s ease;
-	z-index: 200;
+	z-index: 2;
 	background-color: blue;
 
 	&.active{
 		bottom: 0;
 	}
+
+	@include mediaQuery($xlrg){
+		height: 80vh;
+		bottom: -80vh;
+	}
 }
 
 .portraitLrg{
-	width: 7rem;
-	height: 100%;
+	display: flex;
+	align-content: center;
+	justify-content: center;
+
+	@include mediaQuery($med){
+		width: 7rem;
+		height: 100%;
+	}
+
+	@include mediaQuery($lrg){
+		width: 100%;
+		height: 100%;
+	}
 }
 
 .bioLrg{
 	color: #FEFEFE;
+	text-align: center;
+	padding-left: 1rem;
+	padding-right: 1rem;
+
+	@include mediaQuery($xsml){
+	}
+
+	@include mediaQuery($lrg){		
+		h2{
+			font-size: 1.5rem;
+		}
+
+		p{
+			font-size: 1rem;
+		}
+		height: 100%;
+	}
 }
 
 .web{
