--- a/app/css/main.css
+++ b/app/css/main.css
@@ -56,40 +56,48 @@
     border: 1px solid rgba(0, 0, 0, 0.5); }
 
 .container {
-  width: 1200px;
+  width: 1600px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
   position: relative; }
-  @media (max-width: 1220px) {
+  @media (max-width: 1610px) {
     .container {
       justify-content: center;
       flex-direction: column;
-      width: 100%;
+      width: 80%;
+      margin: 0 auto;
       padding: 0 30px 30px; } }
+  @media (max-width: 1200px) {
+    .container {
+      width: 100%; } }
 
 .card {
   padding: 24px;
   border-radius: 4px;
   border: 1px solid rgba(0, 0, 0, 0.4); }
 
-.actions {
+.actions, .instructions {
   width: 270px;
   position: sticky;
-  top: 24px;
-  max-height: 300px; }
-  @media (max-width: 1220px) {
-    .actions {
+  top: 24px; }
+  .actions > .card, .instructions > .card {
+    margin-top: 24px; }
+  @media (max-width: 1610px) {
+    .actions, .instructions {
       width: 100%;
       position: static;
       margin-top: 24px; } }
 
+.instructions p {
+  margin-top: 8px; }
+
 .content {
   width: 900px; }
-  @media (max-width: 1220px) {
+  @media (max-width: 1610px) {
     .content {
       width: 100%; } }
-  .content div {
+  .content > div {
     margin-top: 24px; }
 
 /*# sourceMappingURL=main.css.map */
