--- a/app/css/main.css
+++ b/app/css/main.css
@@ -55,6 +55,26 @@
   .inputField:hover .inputBorder {
     border: 1px solid rgba(0, 0, 0, 0.5); }
 
+#snackbar {
+  min-width: 300px;
+  max-width: 600px;
+  height: 48px;
+  position: fixed;
+  bottom: -48px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  align-items: center;
+  border-radius: 8px;
+  box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
+  background-color: #333333;
+  color: white;
+  z-index: 200;
+  transition: 0.25s; }
+  #snackbar #snackbarMsg {
+    margin-left: 16px;
+    font-size: 1.1em; }
+
 .container {
   width: 1600px;
   margin: 0 auto;
@@ -79,15 +99,13 @@
 
 .actions, .instructions {
   width: 270px;
-  position: sticky;
-  top: 24px; }
+  position: sticky; }
   .actions > .card, .instructions > .card {
     margin-top: 24px; }
   @media (max-width: 1610px) {
     .actions, .instructions {
       width: 100%;
-      position: static;
-      margin-top: 24px; } }
+      position: static; } }
 
 .instructions p {
   margin-top: 8px; }
