--- a/app/scss/_homePage.scss
+++ b/app/scss/_homePage.scss
@@ -1,6 +1,33 @@
 $breakPoint1: 1610px;
 $breakPoint2: 1200px;
 
+#snackbar {
+	min-width: 300px;
+	max-width: 600px;
+	height: 48px;
+	position: fixed;
+	bottom: -48px;
+	left: 50%;
+	transform: translateX(-50%);
+
+	display: flex;
+	align-items: center;
+
+	border-radius: 8px;
+	box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12);
+
+	background-color: #333333;
+	color: white;
+	z-index: 200;
+
+	transition: 0.25s;
+
+	#snackbarMsg {
+		margin-left: 16px;
+		font-size: 1.1em;
+	}
+}
+
 .container {
 	width: 1600px;
 	margin: 0 auto;
@@ -29,14 +56,12 @@ $breakPoint2: 1200px;
 .actions, .instructions {
 	width: 270px;
 	position: sticky;
-	top: 24px;
 	> .card {
 		margin-top: 24px;
 	}
 	@media (max-width: $breakPoint1) {
 		width: 100%;
 		position: static;
-		margin-top: 24px;
 	}
 }
 
@@ -54,8 +79,4 @@ $breakPoint2: 1200px;
 	> div {
 		margin-top: 24px;
 	}
-}
-
-.accountBox {
-
 }
