now rendering data

--- a/display/css/main.css
+++ b/display/css/main.css
@@ -327,12 +327,6 @@ body {
   display: flex;
   flex-direction: row;
 }
-@media screen and (min-width: 720px) {
-  .cardHolder {
-    display: flex;
-    justify-content: space-around;
-  }
-}
 @media screen and (min-width: 540px) {
   .cardHolder {
     max-width: 100%;
@@ -340,8 +334,9 @@ body {
 }
 @media screen and (min-width: 720px) {
   .cardHolder {
+    display: flex;
+    justify-content: space-around;
     margin: 4.5rem;
-    max-width: 80%;
   }
 }
 
@@ -490,6 +485,25 @@ body {
   -o-transition: all 0.2s ease-in;
   -webkit-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
+}
+
+.era {
+  margin-top: 3rem;
+}
+
+#E {
+  width: 4rem;
+  height: 4rem;
+}
+
+#R {
+  width: 4rem;
+  height: 4rem;
+}
+
+#A {
+  width: 4rem;
+  height: 4rem;
 }
 
 #E::after {
