--- a/app/scss/_homePage.scss
+++ b/app/scss/_homePage.scss
@@ -1,32 +1,32 @@
 $breakPoint1: 1610px;
 $breakPoint2: 1200px;
+$breakPoint3: 880px;
 
 #snackbar {
 	min-width: 300px;
 	max-width: 600px;
 	height: 48px;
 	position: fixed;
-	bottom: -48px;
+	bottom: -54px;
 	left: 50%;
 	transform: translateX(-50%);
-
 	display: flex;
 	align-items: center;
-
 	border-radius: 8px;
 	box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12);
-
 	background-color: #333333;
 	color: white;
 	z-index: 200;
-
 	transition: 0.25s;
-
 	#snackbarMsg {
 		margin-left: 16px;
 		font-size: 1.1em;
 	}
 }
+
+// #editor {
+// 	text-align: center !important;
+// }
 
 .container {
 	width: 1600px;
@@ -35,8 +35,8 @@ $breakPoint2: 1200px;
 	justify-content: space-between;
 	position: relative;
 	@media (max-width: $breakPoint1) {
-		justify-content: center;
-		flex-direction: column;
+		flex-direction: row;
+		flex-wrap: wrap;
 		width: 80%;
 		margin: 0 auto;
 		padding: 0 30px 30px;
@@ -52,20 +52,63 @@ $breakPoint2: 1200px;
 	border: 1px solid rgba(0,0,0,0.4);
 }
 
-
 .actions, .instructions {
 	width: 270px;
 	position: sticky;
+	align-self: flex-start;
+	top: 24px;
+	order: 1;
 	> .card {
-		margin-top: 24px;
+		position: relative;
 	}
 	@media (max-width: $breakPoint1) {
-		width: 100%;
-		position: static;
+		position: inherit;
+		width: 48%;
+		align-self: auto;
+		> .card {
+			height: calc(100% - 24px);
+		}
+	}
+}
+
+.profileImage  {
+	width: 100px;
+	border-radius: 50%;
+}
+
+.actions {
+	.card {
+		text-align: center;
+		.buttons {
+			margin-bottom: 24px;
+			* {
+				display: inline-block;
+				margin: 4px 0;
+			}
+		}
+	}
+	.accountButton {
+		text-decoration: none;
+		padding: 8px 24px;
+		border-radius: 4px;
+		border: none;
+		background-color: lightblue;
+		font-size: 1em;
+		color: white;
+		transition: 0.2s;
+		cursor: pointer;
+		outline: none;
+		&:hover {
+			background-color: blue;
+		}
 	}
 }
 
 .instructions {
+	order: 3;
+	@media (max-width: $breakPoint1) {
+		order: 2;
+	}
 	p {
 		margin-top: 8px;
 	}
@@ -73,10 +116,21 @@ $breakPoint2: 1200px;
 
 .content {
 	width: 900px;
+	order: 2;
 	@media (max-width: $breakPoint1) {
+		order: 3;
 		width: 100%;
 	}
 	> div {
 		margin-top: 24px;
+	}
+}
+
+.accountBox {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	.information {
+		text-align: center;
 	}
 }
