--- a/display/css/main.css
+++ b/display/css/main.css
@@ -298,6 +298,57 @@ body {
   }
 }
 
+span {
+  background-color: transparent;
+  border: 2px solid;
+  font: inherit;
+  line-height: 1;
+  margin: 0.5em;
+  padding: 1em 2em;
+  border-radius: 2.5rem;
+  text-transform: uppercase;
+  font-weight: bold;
+  transition: 1s ease;
+}
+span:hover, span:focus {
+  box-shadow: inset 0 0 0 2em var(--hover);
+  background: #3A1C71;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #FFAF7B, #D76D77, #3A1C71);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #FFAF7B, #D76D77, #3A1C71);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  transition: 1s ease;
+}
+
+.btn:hover,
+.btn:focus {
+  color: white;
+  box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
+  transform: translateY(-0.25em);
+}
+
+.webBtn {
+  background-image: linear-gradient(to right, #006175 0%, #00a950 100%);
+}
+
+.graphic:hover {
+  transition: 0.5s ease;
+  border: 2px solid;
+  background: #3A1C71;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #FFAF7B, #D76D77, #3A1C71);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #FFAF7B, #D76D77, #3A1C71);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  transition: 1s ease;
+}
+
+.web:hover {
+  transition: 0.8s;
+  border: 2px solid;
+}
+
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   padding: 6px;
@@ -307,6 +358,7 @@ body {
   margin: 1rem;
   color: #FEFEFE;
   border-radius: 5px;
+  transition: 1s;
   display: flex;
   flex: 1 1 auto;
   max-height: 100%;
@@ -454,39 +506,6 @@ body {
   }
 }
 
-.web {
-  margin: 2.5rem;
-}
-.web:hover {
-  box-shadow: 0px 0px 30px red;
-  -moz-transition: all 0.2s ease-in;
-  -o-transition: all 0.2s ease-in;
-  -webkit-transition: all 0.2s ease-in;
-  transition: all 0.2s ease-in;
-}
-
-.gameArt {
-  margin: 2.5rem;
-}
-.gameArt:hover {
-  box-shadow: 0px 0px 30px blue;
-  -moz-transition: all 0.2s ease-in;
-  -o-transition: all 0.2s ease-in;
-  -webkit-transition: all 0.2s ease-in;
-  transition: all 0.2s ease-in;
-}
-
-.graphic {
-  margin: 2.5rem;
-}
-.graphic:hover {
-  box-shadow: 0px 0px 30px green;
-  -moz-transition: all 0.2s ease-in;
-  -o-transition: all 0.2s ease-in;
-  -webkit-transition: all 0.2s ease-in;
-  transition: all 0.2s ease-in;
-}
-
 .era {
   margin-top: 3rem;
 }
@@ -504,51 +523,6 @@ body {
 #A {
   width: 4rem;
   height: 4rem;
-}
-
-#E::after {
-  background: #9de2fe;
-  background: linear-gradient(225deg, #9de2fe 0%, #ffc38a 57%, #d74177 100%);
-  display: block;
-  content: "";
-  border-bottom: solid 0.4rem;
-  transform: scaleX(0);
-  transition: transform 250ms ease-in-out;
-  border-radius: 10px;
-}
-
-#E:hover::after {
-  transform: scaleX(1);
-}
-
-#R::after {
-  background: #2c2dc7;
-  background: linear-gradient(90deg, #2c2dc7 0%, #fd1d1d 50%, #fcb045 100%);
-  display: block;
-  content: "";
-  border-bottom: solid 0.4rem;
-  transform: scaleX(0);
-  transition: transform 250ms ease-in-out;
-  border-radius: 10px;
-}
-
-#R:hover::after {
-  transform: scaleX(1);
-}
-
-#A::after {
-  background: #9c2cc7;
-  background: linear-gradient(90deg, #9c2cc7 15%, #1d30fd 43%, #fcb045 81%);
-  display: block;
-  content: "";
-  border-bottom: solid 0.4rem;
-  transform: scaleX(0);
-  transition: transform 250ms ease-in-out;
-  border-radius: 10px;
-}
-
-#A:hover::after {
-  transform: scaleX(1);
 }
 
 /*# sourceMappingURL=main.css.map */
