--- a/display/scss/main.scss
+++ b/display/scss/main.scss
@@ -25,8 +25,10 @@ $card: #363636;
 }
 
 @mixin gameArt{
-	background: rgb(156,44,199);
-	background: linear-gradient(90deg, rgba(156,44,199,1) 15%, rgba(29,48,253,1) 43%, rgba(252,176,69,1) 81%);
+	background: #3A1C71;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #FFAF7B, #D76D77, #3A1C71);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #FFAF7B, #D76D77, #3A1C71); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	transition: 1s ease;
 }
 
 @mixin webUx{
@@ -39,18 +41,18 @@ $card: #363636;
 	background: linear-gradient(225deg, rgba(157,226,254,1) 0%, rgba(255,195,138,1) 57%, rgba(215,65,119,1) 100%);
 }
 
-@mixin after{
-	display:block;
-	content: '';
-	border-bottom: solid 0.4rem;
-	transform: scaleX(0);
-	transition: transform 250ms ease-in-out;
-	border-radius: 10px;
-}
-
-@mixin hoverAfter{
-	transform: scaleX(1);
-}
+// @mixin after{
+// 	display:block;
+// 	content: '';
+// 	border-bottom: solid 0.4rem;
+// 	transform: scaleX(0);
+// 	transition: transform 250ms ease-in-out;
+// 	border-radius: 10px;
+// }
+//
+// @mixin hoverAfter{
+// 	transform: scaleX(1);
+// }
 
 //grids and media-queries
 
@@ -137,6 +139,57 @@ body{
 	}
 }
 
+
+span {
+	background-color: transparent;
+	border: 2px solid;
+	font: inherit;
+	line-height: 1;
+	margin: 0.5em;
+	padding: 1em 2em;
+	border-radius: 2.5rem;
+	text-transform: uppercase;
+	font-weight: bold;
+	transition: 1s ease;
+
+	&:hover,
+	&:focus {
+		box-shadow: inset 0 0 0 2em var(--hover);
+		@include gameArt;
+	}
+}
+
+.btn:hover,
+.btn:focus {
+	color: white;
+  box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
+  transform: translateY(-0.25em);
+}
+
+.webBtn{
+		background-image: linear-gradient(to right, #006175 0%, #00a950 100%);
+
+}
+
+// .webBtn:hover{
+// 	color: white;
+// }
+
+.graphic:hover{
+	transition: .5s ease;
+	border: 2px solid;
+	@include gameArt;
+}
+
+
+.web:hover{
+	transition: 0.8s;
+	border: 2px solid;
+}
+
+
+
+
 .card{
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 	padding: 6px;
@@ -146,6 +199,7 @@ body{
 	margin: 1rem;
 	color: #FEFEFE;
 	border-radius: 5px;
+	transition: 1s;
 	display: flex;
 	flex: 1 1 auto;
 	max-height: 100%;
@@ -293,45 +347,6 @@ body{
 	}
 }
 
-.web{
-
-	margin: 2.5rem;
-
-
-	&:hover{
-		box-shadow:0px 0px 30px red;
-		-moz-transition: all 0.2s ease-in;
-		-o-transition: all 0.2s ease-in;
-		-webkit-transition: all 0.2s ease-in;
-		transition: all 0.2s ease-in;
-	}
-}
-
-.gameArt{
-
-	margin: 2.5rem;
-
-	&:hover{
-		box-shadow:0px 0px 30px blue;
-		-moz-transition: all 0.2s ease-in;
-		-o-transition: all 0.2s ease-in;
-		-webkit-transition: all 0.2s ease-in;
-		transition: all 0.2s ease-in;
-	}
-}
-
-.graphic{
-
-	margin: 2.5rem;
-
-	&:hover{
-		box-shadow:0px 0px 30px green;
-		-moz-transition: all 0.2s ease-in;
-		-o-transition: all 0.2s ease-in;
-		-webkit-transition: all 0.2s ease-in;
-		transition: all 0.2s ease-in;
-	}
-}
 
 
 .era{
@@ -354,29 +369,29 @@ body{
 	height: 4rem;
 }
 
-#E::after{
-	@include graphic;
-	@include after;
-}
-
-#E:hover::after{
-	@include hoverAfter;
-}
-
-#R::after{
-	@include webUx;
-	@include after;
-}
-
-#R:hover::after{
-	@include hoverAfter;
-}
-
-#A::after{
-	@include gameArt;
-	@include after;
-}
-
-#A:hover::after{
-	@include hoverAfter;
-}
+// #E::after{
+// 	@include graphic;
+// 	@include after;
+// }
+//
+// #E:hover::after{
+// 	@include hoverAfter;
+// }
+//
+// #R::after{
+// 	@include webUx;
+// 	@include after;
+// }
+//
+// #R:hover::after{
+// 	@include hoverAfter;
+// }
+//
+// #A::after{
+// 	@include gameArt;
+// 	@include after;
+// }
+//
+// #A:hover::after{
+// 	@include hoverAfter;
+// }
