--- a/display/css/main.css
+++ b/display/css/main.css
@@ -298,7 +298,7 @@ body {
   }
 }
 
-span {
+button {
   background-color: transparent;
   border: 2px solid;
   font: inherit;
@@ -310,7 +310,7 @@ span {
   font-weight: bold;
   transition: 1s ease;
 }
-span:hover, span:focus {
+button:hover, button:focus {
   box-shadow: inset 0 0 0 2em var(--hover);
   background: #3A1C71;
   /* fallback for old browsers */
@@ -335,13 +335,6 @@ span:hover, span:focus {
 .graphic:hover {
   transition: 0.5s ease;
   border: 2px solid;
-  background: #3A1C71;
-  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #FFAF7B, #D76D77, #3A1C71);
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #FFAF7B, #D76D77, #3A1C71);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  transition: 1s ease;
 }
 
 .web:hover {
