--- a/display/css/main.css
+++ b/display/css/main.css
@@ -2,301 +2,225 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
-}
+  font-family: 'Roboto', sans-serif; }
 
 .container {
   max-width: 1140px;
-  margin: 0 auto;
-}
-.container-fluid {
-  margin: 0;
-  max-width: 100%;
-}
-.container-row {
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-}
+  margin: 0 auto; }
+  .container-fluid {
+    margin: 0;
+    max-width: 100%; }
+  .container-row {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%; }
 
 .col-1 {
-  flex-basis: 8.3333333333%;
-}
+  flex-basis: 8.3333333333%; }
 
 .col-2 {
-  flex-basis: 16.6666666667%;
-}
+  flex-basis: 16.6666666667%; }
 
 .col-3 {
-  flex-basis: 25%;
-}
+  flex-basis: 25%; }
 
 .col-4 {
-  flex-basis: 33.3333333333%;
-}
+  flex-basis: 33.3333333333%; }
 
 .col-5 {
-  flex-basis: 41.6666666667%;
-}
+  flex-basis: 41.6666666667%; }
 
 .col-6 {
-  flex-basis: 50%;
-}
+  flex-basis: 50%; }
 
 .col-7 {
-  flex-basis: 58.3333333333%;
-}
+  flex-basis: 58.3333333333%; }
 
 .col-8 {
-  flex-basis: 66.6666666667%;
-}
+  flex-basis: 66.6666666667%; }
 
 .col-9 {
-  flex-basis: 75%;
-}
+  flex-basis: 75%; }
 
 .col-10 {
-  flex-basis: 83.3333333333%;
-}
+  flex-basis: 83.3333333333%; }
 
 .col-11 {
-  flex-basis: 91.6666666667%;
-}
+  flex-basis: 91.6666666667%; }
 
 .col-12 {
-  flex-basis: 100%;
-}
+  flex-basis: 100%; }
 
 @media screen and (min-width: 720px) {
   .colmd-1 {
-    flex-basis: 8.3333333333%;
-  }
+    flex-basis: 8.3333333333%; }
 
   .colmd-2 {
-    flex-basis: 16.6666666667%;
-  }
+    flex-basis: 16.6666666667%; }
 
   .colmd-3 {
-    flex-basis: 25%;
-  }
+    flex-basis: 25%; }
 
   .colmd-4 {
-    flex-basis: 33.3333333333%;
-  }
+    flex-basis: 33.3333333333%; }
 
   .colmd-5 {
-    flex-basis: 41.6666666667%;
-  }
+    flex-basis: 41.6666666667%; }
 
   .colmd-6 {
-    flex-basis: 50%;
-  }
+    flex-basis: 50%; }
 
   .colmd-7 {
-    flex-basis: 58.3333333333%;
-  }
+    flex-basis: 58.3333333333%; }
 
   .colmd-8 {
-    flex-basis: 66.6666666667%;
-  }
+    flex-basis: 66.6666666667%; }
 
   .colmd-9 {
-    flex-basis: 75%;
-  }
+    flex-basis: 75%; }
 
   .colmd-10 {
-    flex-basis: 83.3333333333%;
-  }
+    flex-basis: 83.3333333333%; }
 
   .colmd-11 {
-    flex-basis: 91.6666666667%;
-  }
+    flex-basis: 91.6666666667%; }
 
   .colmd-12 {
-    flex-basis: 100%;
-  }
-}
+    flex-basis: 100%; } }
 @media screen and (min-width: 540px) {
   .colsml-1 {
-    flex-basis: 8.3333333333%;
-  }
+    flex-basis: 8.3333333333%; }
 
   .colsml-2 {
-    flex-basis: 16.6666666667%;
-  }
+    flex-basis: 16.6666666667%; }
 
   .colsml-3 {
-    flex-basis: 25%;
-  }
+    flex-basis: 25%; }
 
   .colsml-4 {
-    flex-basis: 33.3333333333%;
-  }
+    flex-basis: 33.3333333333%; }
 
   .colsml-5 {
-    flex-basis: 41.6666666667%;
-  }
+    flex-basis: 41.6666666667%; }
 
   .colsml-6 {
-    flex-basis: 50%;
-  }
+    flex-basis: 50%; }
 
   .colsml-7 {
-    flex-basis: 58.3333333333%;
-  }
+    flex-basis: 58.3333333333%; }
 
   .colsml-8 {
-    flex-basis: 66.6666666667%;
-  }
+    flex-basis: 66.6666666667%; }
 
   .colsml-9 {
-    flex-basis: 75%;
-  }
+    flex-basis: 75%; }
 
   .colsml-10 {
-    flex-basis: 83.3333333333%;
-  }
+    flex-basis: 83.3333333333%; }
 
   .colsml-11 {
-    flex-basis: 91.6666666667%;
-  }
+    flex-basis: 91.6666666667%; }
 
   .colsml-12 {
-    flex-basis: 100%;
-  }
-}
+    flex-basis: 100%; } }
 @media screen and (min-width: 960px) {
   .collrg-1 {
-    flex-basis: 8.3333333333%;
-  }
+    flex-basis: 8.3333333333%; }
 
   .collrg-2 {
-    flex-basis: 16.6666666667%;
-  }
+    flex-basis: 16.6666666667%; }
 
   .collrg-3 {
-    flex-basis: 25%;
-  }
+    flex-basis: 25%; }
 
   .collrg-4 {
-    flex-basis: 33.3333333333%;
-  }
+    flex-basis: 33.3333333333%; }
 
   .collrg-5 {
-    flex-basis: 41.6666666667%;
-  }
+    flex-basis: 41.6666666667%; }
 
   .collrg-6 {
-    flex-basis: 50%;
-  }
+    flex-basis: 50%; }
 
   .collrg-7 {
-    flex-basis: 58.3333333333%;
-  }
+    flex-basis: 58.3333333333%; }
 
   .collrg-8 {
-    flex-basis: 66.6666666667%;
-  }
+    flex-basis: 66.6666666667%; }
 
   .collrg-9 {
-    flex-basis: 75%;
-  }
+    flex-basis: 75%; }
 
   .collrg-10 {
-    flex-basis: 83.3333333333%;
-  }
+    flex-basis: 83.3333333333%; }
 
   .collrg-11 {
-    flex-basis: 91.6666666667%;
-  }
+    flex-basis: 91.6666666667%; }
 
   .collrg-12 {
-    flex-basis: 100%;
-  }
-}
+    flex-basis: 100%; } }
 @media screen and (min-width: 1140px) {
   .colxlrg-1 {
-    flex-basis: 8.3333333333%;
-  }
+    flex-basis: 8.3333333333%; }
 
   .colxlrg-2 {
-    flex-basis: 16.6666666667%;
-  }
+    flex-basis: 16.6666666667%; }
 
   .colxlrg-3 {
-    flex-basis: 25%;
-  }
+    flex-basis: 25%; }
 
   .colxlrg-4 {
-    flex-basis: 33.3333333333%;
-  }
+    flex-basis: 33.3333333333%; }
 
   .colxlrg-5 {
-    flex-basis: 41.6666666667%;
-  }
+    flex-basis: 41.6666666667%; }
 
   .colxlrg-6 {
-    flex-basis: 50%;
-  }
+    flex-basis: 50%; }
 
   .colxlrg-7 {
-    flex-basis: 58.3333333333%;
-  }
+    flex-basis: 58.3333333333%; }
 
   .colxlrg-8 {
-    flex-basis: 66.6666666667%;
-  }
+    flex-basis: 66.6666666667%; }
 
   .colxlrg-9 {
-    flex-basis: 75%;
-  }
+    flex-basis: 75%; }
 
   .colxlrg-10 {
-    flex-basis: 83.3333333333%;
-  }
+    flex-basis: 83.3333333333%; }
 
   .colxlrg-11 {
-    flex-basis: 91.6666666667%;
-  }
+    flex-basis: 91.6666666667%; }
 
   .colxlrg-12 {
-    flex-basis: 100%;
-  }
-}
+    flex-basis: 100%; } }
 body {
-  background-color: #242323;
-}
+  background-color: #242323; }
 
 .landing {
   display: flex;
   align-content: center;
-  justify-content: center;
-}
+  justify-content: center; }
 
 .justify-content {
   display: flex;
-  justify-content: center;
-}
+  justify-content: center; }
 
 .era {
   margin-top: 1.3rem;
   font-size: 3rem;
-  color: #FEFEFE;
-}
-@media screen and (min-width: 720px) {
-  .era {
-    display: inline-block;
-    font-size: 9rem;
-    margin: 1rem;
-  }
-}
-@media screen and (min-width: 960px) {
-  .era {
-    display: inline-block;
-    font-size: 15rem;
-    margin: 1rem;
-  }
-}
+  color: #FEFEFE; }
+  @media screen and (min-width: 720px) {
+    .era {
+      display: inline-block;
+      font-size: 9rem;
+      margin: 1rem; } }
+  @media screen and (min-width: 960px) {
+    .era {
+      display: inline-block;
+      font-size: 15rem;
+      margin: 1rem; } }
 
 button {
   background-color: transparent;
@@ -309,38 +233,33 @@ button {
   text-transform: uppercase;
   font-weight: bold;
   transition: 1s ease;
-}
-button:hover, button:focus {
-  box-shadow: inset 0 0 0 2em var(--hover);
-  background: #3A1C71;
-  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #FFAF7B, #D76D77, #3A1C71);
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #FFAF7B, #D76D77, #3A1C71);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  transition: 1s ease;
-}
+  cursor: pointer; }
+  button:hover, button:focus {
+    box-shadow: inset 0 0 0 2em var(--hover);
+    background: #3A1C71;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #FFAF7B, #D76D77, #3A1C71);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #FFAF7B, #D76D77, #3A1C71);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    transition: 1s ease; }
 
 .btn:hover,
 .btn:focus {
   color: white;
   box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
-  transform: translateY(-0.25em);
-}
+  transform: translateY(-0.25em); }
 
 .webBtn {
-  background-image: linear-gradient(to right, #006175 0%, #00a950 100%);
-}
+  background-image: linear-gradient(to right, #006175 0%, #00a950 100%); }
 
 .graphic:hover {
-  transition: 0.5s ease;
-  border: 2px solid;
-}
+  transition: .5s ease;
+  border: 2px solid; }
 
 .web:hover {
   transition: 0.8s;
-  border: 2px solid;
-}
+  border: 2px solid; }
 
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
@@ -354,36 +273,28 @@ button:hover, button:focus {
   transition: 1s;
   display: flex;
   flex: 1 1 auto;
-  max-height: 100%;
-}
-.card-img {
-  height: 7.7rem;
-  width: 100%;
-  padding: 0.4rem;
-  border-radius: 100%;
-  overflow-x: none;
-}
-.card-content {
-  padding-top: 1rem;
-  padding-right: 1rem;
-}
+  max-height: 100%; }
+  .card-img {
+    height: 7.7rem;
+    width: 100%;
+    padding: 0.4rem;
+    border-radius: 100%;
+    overflow-x: none; }
+  .card-content {
+    padding-top: 1rem;
+    padding-right: 1rem; }
 
 .cardHolder {
   display: flex;
-  flex-direction: row;
-}
-@media screen and (min-width: 540px) {
-  .cardHolder {
-    max-width: 100%;
-  }
-}
-@media screen and (min-width: 720px) {
-  .cardHolder {
-    display: flex;
-    justify-content: space-around;
-    margin: 4.5rem;
-  }
-}
+  flex-direction: row; }
+  @media screen and (min-width: 540px) {
+    .cardHolder {
+      max-width: 100%; } }
+  @media screen and (min-width: 720px) {
+    .cardHolder {
+      display: flex;
+      justify-content: space-around;
+      margin: 4.5rem; } }
 
 #header {
   text-align: center;
@@ -393,17 +304,13 @@ button:hover, button:focus {
   width: 100%;
   position: fixed;
   transition: 1s ease;
-  z-index: 2;
-}
-#header.active {
-  top: 0;
-}
-@media screen and (min-width: 1140px) {
-  #header {
-    height: 20vh;
-    top: -20vh;
-  }
-}
+  z-index: 2; }
+  #header.active {
+    top: 0; }
+  @media screen and (min-width: 1140px) {
+    #header {
+      height: 20vh;
+      top: -20vh; } }
 
 .portrait {
   display: flex;
@@ -412,36 +319,27 @@ button:hover, button:focus {
   width: 5rem;
   height: 5.5rem;
   padding: 0.1rem;
-  border-radius: 80%;
-}
-@media (orientation: landscape) {
-  .portrait {
-    margin-top: 0.1rem;
-    width: 3rem;
-    height: 3.5rem;
-  }
-}
+  border-radius: 80%; }
+  @media (orientation: landscape) {
+    .portrait {
+      margin-top: 0.1rem;
+      width: 3rem;
+      height: 3.5rem; } }
 
 .content {
-  padding: 0.4rem;
-}
-@media screen and (min-width: 720px) {
-  .content {
-    padding: 0.5rem;
-  }
-}
-@media (orientation: landscape) {
-  .content {
-    top: -4rem;
-    padding: 0rem;
-  }
-}
+  padding: 0.4rem; }
+  @media screen and (min-width: 720px) {
+    .content {
+      padding: 0.5rem; } }
+  @media (orientation: landscape) {
+    .content {
+      top: -4rem;
+      padding: 0rem; } }
 
 #exit {
   float: left;
   font-size: 2rem;
-  padding: 0.5rem;
-}
+  padding: 0.5rem; }
 
 #footer {
   width: 100%;
@@ -451,71 +349,53 @@ button:hover, button:focus {
   bottom: -70vh;
   transition: 1s ease;
   z-index: 2;
-  background-color: blue;
-}
-#footer.active {
-  bottom: 0;
-}
-@media screen and (min-width: 1140px) {
-  #footer {
-    height: 80vh;
-    bottom: -80vh;
-  }
-}
+  background-color: blue; }
+  #footer.active {
+    bottom: 0; }
+  @media screen and (min-width: 1140px) {
+    #footer {
+      height: 80vh;
+      bottom: -80vh; } }
 
 .portraitLrg {
   display: flex;
   align-content: center;
-  justify-content: center;
-}
-@media screen and (min-width: 720px) {
-  .portraitLrg {
-    width: 7rem;
-    height: 100%;
-  }
-}
-@media screen and (min-width: 960px) {
-  .portraitLrg {
-    width: 100%;
-    height: 100%;
-  }
-}
+  justify-content: center; }
+  @media screen and (min-width: 720px) {
+    .portraitLrg {
+      width: 7rem;
+      height: 100%; } }
+  @media screen and (min-width: 960px) {
+    .portraitLrg {
+      width: 100%;
+      height: 100%; } }
 
 .bioLrg {
   color: #FEFEFE;
   text-align: center;
   padding-left: 1rem;
-  padding-right: 1rem;
-}
-@media screen and (min-width: 960px) {
-  .bioLrg {
-    height: 100%;
-  }
-  .bioLrg h2 {
-    font-size: 1.5rem;
-  }
-  .bioLrg p {
-    font-size: 1rem;
-  }
-}
+  padding-right: 1rem; }
+  @media screen and (min-width: 960px) {
+    .bioLrg {
+      height: 100%; }
+      .bioLrg h2 {
+        font-size: 1.5rem; }
+      .bioLrg p {
+        font-size: 1rem; } }
 
 .era {
-  margin-top: 3rem;
-}
+  margin-top: 3rem; }
 
 #E {
   width: 4rem;
-  height: 4rem;
-}
+  height: 4rem; }
 
 #R {
   width: 4rem;
-  height: 4rem;
-}
+  height: 4rem; }
 
 #A {
   width: 4rem;
-  height: 4rem;
-}
+  height: 4rem; }
 
 /*# sourceMappingURL=main.css.map */
