--- a/display/scss/main.scss
+++ b/display/scss/main.scss
@@ -151,7 +151,7 @@ button {
 	text-transform: uppercase;
 	font-weight: bold;
 	transition: 1s ease;
-
+	cursor: pointer;
 	&:hover,
 	&:focus {
 		box-shadow: inset 0 0 0 2em var(--hover);
